[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "dk_lvm_tools"
description = "SDSS-V LVM Visualization Tools"
requires-python = ">=3.12"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Dhanesh Krishnarao (DK)", email = "dkrishnarao@coloradocollege.edu" },
]
dependencies = []
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "dk_lvm_tools.example_mod:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/Deech08/dk_lvm_tools"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["dk_lvm_tools._dev*"]

[tool.setuptools_scm]
version_file = "dk_lvm_tools/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "dk_lvm_tools",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "dk_lvm_tools/__init*",
 "dk_lvm_tools/conftest.py",
 "dk_lvm_tools/*setup_package*",
 "dk_lvm_tools/tests/*",
 "dk_lvm_tools/*/tests/*",
 "dk_lvm_tools/extern/*",
 "dk_lvm_tools/version*",
 "*/dk_lvm_tools/__init*",
 "*/dk_lvm_tools/conftest.py",
 "*/dk_lvm_tools/*setup_package*",
 "*/dk_lvm_tools/tests/*",
 "*/dk_lvm_tools/*/tests/*",
 "*/dk_lvm_tools/extern/*",
 "*/dk_lvm_tools/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
